# SharpChannel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Cmake/: Config.cmake
Inlcude/SharpChannel/: ChannelEventLoop.hpp  ChannelException.hpp  CommandChannel.hpp  CommandOutputChannel.hpp  Control.hpp  IChannel.hpp  IChannelDataObserver.hpp  IChannelEventLoop.hpp  IChannelMessageObserver.hpp  IChannelObservable.hpp  IChannelObserver.hpp  ICompleteObservable.hpp  ICompleteObserver.hpp  IDataObservable.hpp  IDataObserver.hpp  IErrorObservable.hpp  IMessageObservable.hpp  IMessageObserver.hpp  IObservables.hpp  IObserver.hpp  IObservers.hpp  IReadOnlyChannel.hpp  IRunCommand.hpp  IRunnable.hpp  IUnsubscribable.hpp  IWriteOnlyChannel.hpp  NamedPipeChannel.hpp  RunCommand.hpp  Settings.hpp  SharpChannel.hpp  SocketClientChannel.hpp  Unsubscriber.hpp
Inlcude/SharpChannel/Channels/: Callback.hpp  CallbacksHandler.hpp  CallbacksMap.hpp  ChannelEventLoop.hpp  FullDuplexChannel.hpp  IChannelEventLoop.hpp  ICommandChannel.hpp  ICommandOutputChannel.hpp  INamedPipeChannel.hpp  IReadOnlyChannel.hpp  ISocketClientChannel.hpp  IWriteOnlyChannel.hpp  ReadOnlyChannel.hpp  WriteOnlyChannel.hpp
Inlcude/SharpChannel/Observables/: IChannelDataObservable.hpp  IChannelMessageObservable.hpp  ICompleteObservable.hpp  IDataObservable.hpp  IErrorObservable.hpp  IMessageObservable.hpp
Inlcude/SharpChannel/Observers/: IChannelDataObserver.hpp  IChannelMessageObserver.hpp  ICompleteObserver.hpp  IDataObserver.hpp  IErrorObserver.hpp  IMessageObserver.hpp
Source/: CMakeLists.txt  Callback.cpp  CallbacksHandler.cpp  CallbacksMap.cpp  ChannelObservable.cpp  ChannelObserver.cpp  CommandChannel.cpp  CommandChannelImpl.cpp  CommandOutputChannel.cpp  NamedPipeChannel.cpp  ReadOnlyChannel.cpp  RunCommand.cpp  SharpChannel.cpp  SocketClientChannel.cpp  Unsubscriber.cpp  WriteOnlyChannel.cpp  main.cpp
Source/.h/: Callback.hpp  Callbacks.hpp  CallbacksHandler.hpp  CallbacksMap.hpp  ChannelEventLoop.hpp  ChannelObservable.hpp  ChannelObserver.hpp  CommandChannelImpl.hpp  Config.hpp  FullDuplexChannel.hpp  GetObject.hpp  ICallbacks.hpp  NamedPipe.hpp  ReadOnlyChannel.hpp  RunCommand.hpp  SocketClient.hpp  SocketServer.hpp  Subject.hpp  Unsubscriber.hpp  WriteOnlyChannel.hpp
Source/ChannelManager/: CMakeLists.txt  ChannelManager.cpp
Source/ChannelManager/.h/: ChannelManager.hpp
Source/ChannelManager/Channels/: CMakeLists.txt  Callback.cpp  ReadOnlyChannel.cpp  WriteOnlyChannel.cpp
Source/ChannelManager/Channels/.h/: Callback.hpp  ReadOnlyChannel.hpp  WriteOnlyChannel.hpp
Source/ChannelManager/Channels/.h/.i/: IMessageObserver.hpp  IObserver.hpp  IReadOnlyChannel.hpp  IRunnable.hpp  IUnsubscribable.hpp  IWriteOnlyChannel.hpp
Source/ChannelManager/ChannelsImplementation/: CMakeLists.txt  NamedPipe.cpp  RunCommand.cpp  SocketServer.cpp
Source/ChannelManager/ChannelsImplementation/.h/: NamedPipe.hpp  RunCommand.hpp  Settings.hpp  SocketServer.hpp  StdComunicator.hpp
Source/Channels/: CMakeLists.txt  Callback.cpp  CallbacksMap.cpp  ReadOnlyChannel.cpp  Unsubscriber.cpp  WriteOnlyChannel.cpp
Source/Channels/.h/: Callback.hpp  CallbacksMap.hpp  Channel.hpp  GetObject.hpp  OsFlags.hpp  ReadOnlyChannel.hpp  Unsubscriber.hpp  WriteOnlyChannel.hpp
Source/Channels/Implementation/: CMakeLists.txt  NamedPipe.cpp  SocketServer.cpp  StdComunicatorWin.cpp
Source/Channels/Implementation/.h/: NamedPipe.hpp  SocketServer.hpp
Source/Implementation/: CMakeLists.txt  NamedPipe.cpp  RunCommand.cpp  StdComunicatorWin.cpp
Source/Implementation/.h/: NamedPipe.hpp  RunCommand.hpp  SocketServer.hpp  StdComunicator.hpp
Source/Implementation/Linux/: SocketServerLinux.cpp
Source/Implementation/Linux/.h/: SocketServerLinux.hpp
Source/Implementation/Windows/: SocketServerWin.cpp
Source/Implementation/Windows/.h/: SocketServerWin.hpp
Source/Linux/: SocketServerLinux.cpp
Source/Linux/.h/: SocketServerLinux.hpp
Source/Multiplatform/: CommandChannelMulti.cpp
Source/Multiplatform/.h/: CommandChannelMulti.hpp
Source/ProcessManager/: CMakeLists.txt  Callback.cpp  ProcessManager.cpp  ReadOnlySubject.cpp
Source/ProcessManager/ProcessComunicator/: CMakeLists.txt  NamedPipe.cpp  RunCommand.cpp  SocketServer.cpp  StdComunicatorWin.cpp
Source/ProcessManager/ProcessComunicator/h/: NamedPipe.hpp  RunCommand.hpp  Settings.hpp  SocketServer.hpp  StdComunicator.hpp
Source/ProcessManager/h/: Callback.hpp  Control.hpp  ProcessComunicator.hpp  ProcessManager.hpp  ReadOnlySubject.hpp  Subject.hpp  WriteOnlySubject.hpp
Source/ProcessManager/h/i/: IObserver.hpp  IProcessComunicator.hpp  IReadOnlySubject.hpp  ISubject.hpp  IUnsubscribable.hpp  IWriteOnlySubject.hpp
Source/Windows/: CommandOutputChannelImpl.cpp  CommandOutputChannelWin.cpp  NamedPipeChannelWin.cpp  SocketClientChannelImpl.cpp  SocketClientChannelWin.cpp  SocketClientWin.cpp  SocketServerWin.cpp
Source/Windows/.h/: CommandOutputChannelImpl.hpp  CommandOutputChannelWin.hpp  NamedPipeChannelWin.hpp  SocketClientChannelImpl.hpp  SocketClientChannelWin.hpp  SocketClientWin.hpp  SocketServerWin.hpp  StdComunicator.hpp
Test/: CMakeLists.txt  ChannelBehaviourTest.cpp  CommandChannelTest.cpp  CommandOutputChannel.cpp  CommandOutputChannelTest.cpp  RunCommandTest.cpp  SocketClientChannelTest.cpp  SocketClientTest.cpp  SocketServerTest.cpp  main.cpp  main.py  socketServerTester.py
Test/Windows/: ChannelBehaviourTest.cpp  SocketServerTest.cpp  Test.cpp
Test/python/: echo.py  socketClientTester.py
